; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/pcmcia/extr_nsp_cs.c_nsp_bus_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/pcmcia/extr_nsp_cs.c_nsp_bus_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@IRQCONTROL = common dso_local global i32 0, align 4
@IRQCONTROL_ALLMASK = common dso_local global i32 0, align 4
@SCSIBUSCTRL = common dso_local global i32 0, align 4
@SCSI_RST = common dso_local global i32 0, align 4
@IRQPHASESENCE = common dso_local global i32 0, align 4
@IRQCONTROL_ALLCLEAR = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @nsp_bus_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nsp_bus_reset(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @IRQCONTROL, align 4
  %10 = load i32, i32* @IRQCONTROL_ALLMASK, align 4
  %11 = call i32 @nsp_write(i32 %8, i32 %9, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @SCSIBUSCTRL, align 4
  %14 = load i32, i32* @SCSI_RST, align 4
  %15 = call i32 @nsp_index_write(i32 %12, i32 %13, i32 %14)
  %16 = call i32 @mdelay(i32 100)
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @SCSIBUSCTRL, align 4
  %19 = call i32 @nsp_index_write(i32 %17, i32 %18, i32 0)
  store i32 0, i32* %4, align 4
  br label %20

20:                                               ; preds = %27, %1
  %21 = load i32, i32* %4, align 4
  %22 = icmp slt i32 %21, 5
  br i1 %22, label %23, label %30

23:                                               ; preds = %20
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @IRQPHASESENCE, align 4
  %26 = call i32 @nsp_index_read(i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %23
  %28 = load i32, i32* %4, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %4, align 4
  br label %20

30:                                               ; preds = %20
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %32 = call i32 @nsphw_init_sync(%struct.TYPE_4__* %31)
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* @IRQCONTROL, align 4
  %35 = load i32, i32* @IRQCONTROL_ALLCLEAR, align 4
  %36 = call i32 @nsp_write(i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* @SUCCESS, align 4
  ret i32 %37
}

declare dso_local i32 @nsp_write(i32, i32, i32) #1

declare dso_local i32 @nsp_index_write(i32, i32, i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @nsp_index_read(i32, i32) #1

declare dso_local i32 @nsphw_init_sync(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
